src/pages/landing/sass/gallery.module.scss
@import '../../../utils/mixins';

.media {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
  grid-gap: 1rem;
  place-items: center start;
  margin-bottom: 2rem;
}

.thumbnail {
  margin: 0;
  padding: 0;
  width: 150px;
  height: 150px;
  cursor: pointer;
}

.modal {
  background-color: rgba(0, 0, 0, 0.8);
  position: fixed;
  display: block;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  padding: 15px;
  animation: fadein 0.4s;
}

.inner {
  display: grid;
  grid-template-columns: 1fr;
  align-items: center;
  justify-items: center;
  padding: 30px 15px 15px;

  animation: translateUp 0.4s;

  @include mediumPlus() {
    padding: 15px;
  }
}

.inner > *:first-child {
  margin: 0;
  padding: 0;
  width: 100%;
  height: auto;
  max-width: 650px;
}

.anchor {
  display: block;
  cursor: pointer;
}

.close {
  right: 5px;
  position: absolute;
  top: 5px;
  border: 0 none;
  background: none;
  width: 36px;
  height: 36px;
  line-height: 1;
  border-radius: 50%;
  cursor: pointer;
  color: var(--hbr-gray);
  transition: color 150ms ease, background-color 150ms ease;

  &:hover {
    color: var(--hbr-white);
  }

  @include mediumPlus() {
    right: 15px;
    top: 15px;
  }
}

@keyframes fadein {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes translateUp {
  from {
    transform: translateY(10px);
  }
}

:global(.no-scroll) {
  overflow: hidden;
}

